588 roundmanager new teams joining (#589)
* added exclude option and tests

* roundManager can handle new teams joining

* made initialize just be constructor

* added regenerateRounds to states

* removed print statements

* adjusted tests to check for duplicate matches across schedule

* temporary print statements

* fixed odd number teams

* set up to be a little more A-first

* allowed for logging the schedule

* small refactor

* finally fixed roundManager

* added more tests

* fixed maxRounds

* removed unused parameter

* anounces appropriate on-deck

* better anouncements

* updates rounds sidebar

* sorts teamIds before generating pairs